k8s-manifests/formulario-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form-backend
  template:
    metadata:
      labels:
        app: form-backend
    spec:
      containers:
      - name: form-backend
        image: node:14
        command: ["npm", "run", "start:dev"]
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: form-backend
spec:
  selector:
    app: form-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
